--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "trivia",
-  "displayName": "trivia"
+  "displayName": "trivia",
+  "packagerOpts": {
+    "sourceExts": ["ts", "tsx"],
+    "transformer": "node_modules/react-native-typescript-transformer/index.js"
+  }
 }
