--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@types/he": "^1.1.0",
     "@types/jest": "^24.0.19",
     "@types/react": "^16.9.9",
     "@types/react-native": "^0.60.21",
