--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.5",
     "@types/react-test-renderer": "^16.9.1",
+    "axios": "^0.19.0",
     "he": "^1.2.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
